--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,10 +18,62 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: orange;
+
+}
+
+.container {
+  width: fit-content;
+  top: 66%;
+  left: 72%;
+  position: absolute;
+  transform: translate(0,-20%);
+}
+
+.addNewTaskBtn {
+  font-size: 0.75em;
+  width: 170px;
+  height: 45px;
+  background: #c2ff00;
+  border: 0px;
+  position: relative;
+  box-shadow: 
+    inset -4px 2px 1px 1px grey,
+    inset -4px -2px 1px 1px lightgray,
+    inset 4px 0px 1px 1px lightgray;   
+}
+
+.addNewTaskBtn:hover {
+  cursor: pointer;
+	background-color: #a9db03;
+}
+
+.addNewTaskBtn:active {
+  top: 5px;
+  box-shadow: 
+    -4px 2px 1px 1px grey,
+    -4px -2px 1px 1px lightgray,
+    4px 0px 1px 1px lightgray; 
+}
+
+.addNewTaskBtn::after {
+  content: '';
+  background: black;
+  position: absolute;
+  left: -2.5%;
+  top: 0;
+  width: 105%;
+  height: 100%;
+  z-index: -1;
+}
+
+.addNewTaskBtn::before {
+  content: '';
+  background: black;
+  position: absolute;
+  left: 0;
+  top: -5%;
+  width: 100%;
+  height: 113%;
+  z-index: -1;
 }
