--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,7 +27,7 @@ body {
   top: 66%;
   left: 72%;
   position: absolute;
-  transform: translate(0,-20%);
+  transform: translate(0, -20%);
 }
 
 .addNewTaskBtn {
@@ -37,23 +37,23 @@ body {
   background: #c2ff00;
   border: 0px;
   position: relative;
-  box-shadow: 
+  box-shadow:
     inset -4px 2px 1px 1px grey,
     inset -4px -2px 1px 1px lightgray,
-    inset 4px 0px 1px 1px lightgray;   
+    inset 4px 0px 1px 1px lightgray;
 }
 
 .addNewTaskBtn:hover {
   cursor: pointer;
-	background-color: #a9db03;
+  background-color: #a9db03;
 }
 
 .addNewTaskBtn:active {
   top: 5px;
-  box-shadow: 
+  box-shadow:
     -4px 2px 1px 1px grey,
     -4px -2px 1px 1px lightgray,
-    4px 0px 1px 1px lightgray; 
+    4px 0px 1px 1px lightgray;
 }
 
 .addNewTaskBtn::after {
@@ -76,4 +76,16 @@ body {
   width: 100%;
   height: 113%;
   z-index: -1;
+}
+
+.pixel-text-area {
+  margin: 0 auto;
+  display: inline-block;
+  text-align: center;
+  padding: 0.4em 1.3em;
+}
+
+.lvl2 {
+  box-shadow: 4px 0 white, -4px 0 white, 0 -4px white, 0 4px white, 8px 0 black, -8px 0 black, 0 -8px black, 0 8px black, 0 0 0 4px black;
+  margin: 8px auto;
 }
